                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 05-02-2006 fixed: spincontrols didn't display any values.
 - 05-02-2006 added: <spinfont> tag to list, thumb and textboxes.
 - 04-02-2006 fixed: "Return to Videos" in the Videos Now Playing window goes to Videos and not the previous window
 - 04-02-2006 fixed: "Return to Music" in the Music Now Playing window goes to Music and not the previous window
 - 04-02-2006 updated: Icelandic language file (Thnx to kristjan)
 - 04-02-2006 updated: Norwegian language file (Thnx to vnm)
 - 04-02-2006 updated: Italian language file (Thnx to kotix)
 - 04-02-2006 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 04-02-2005 updated: Spanish language file (Thnx to jose_t)
 - 04-02-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 04-02-2006 updated: German language file
 - 04-02-2005 updated: Danish language file (Thnx to hugener)
 - 04-02-2006 fixed: symbol loading for dlls breaks release builds on some bioses
 - 04-02-2006 fixed: xbmc built in release mode wouldn't launch on some bioses
 - 04-02-2006 added: id attribute to controlgroup, and ControlGroup(group).HasFocus(control) conditional - see online manual for more details.
 - 04-02-2006 added: Zoom effect to skin engine.  See online manual for more details.
 - 04-02-2006 changed: More consistent keymapping in fullscreen views (slideshow,video, visualisation).
 - 04-02-2006 changed: Made Info and CodecInfo global functions - Slideshow now uses CodecInfo rather than Info to display the current file info.
 - 04-02-2006 added: support for sub_load <subtitle> slave command for mplayer.dll